--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Terry Moore"
 description              : "An awesome website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "http://terrymoorev.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "terrymoorev/terrymoorev.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
