--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Terry Moore"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           :  "/assets/images/BIO_PIC.jpg"
   bio              : "I am a second year at the Georgia Institute of Technology. I am majoing in Business and Minoring in Computer Sceince and in FinTech."
   location         : "Atlanta, GA"
   email            : "Terry.l.moore@gatech.edu"
